[package]
name = "wayback-scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wayback-scraper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
lol_html = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
